2015-04-01  Ed Schouten  <ed@nuxi.nl>

	* emultempl/elf32.em (gld*_before_allocation): Zero-initialize
	the ehdr_start_save variable.

2015-03-31  Ed Schouten  <ed@nuxi.nl>

	* Makefile.am (ALL_64_EMULATION_SOURCES): Add
	eelf_x86_64_cloudabi.c.
	(eelf_x86_64_cloudabi.c): New.
	* configure.tgt (targ_emul): Set to elf_x86_64_cloudabi for
	x86_64-*-cloudabi*.
	* Makefile.in: Regenerated.
	* emulparams/elf_x86_64_cloudabi.sh: New file.

2015-03-31  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.ac (AM_ZLIB): Removed.
	* Makefile.in: Regenerated.
	* config.in: Likewise.
	* configure: Likewise.

2015-03-24  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* emultempl/aarch64elf.em (_aarch64_add_stub_section): Set section
	alignment to 2.

2015-03-23  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* emultempl/aarch64elf.em
	(elf${ELFSIZE}_aarch64_add_stub_section): Adjust layout.

2015-03-18  Chen Gang  <gang.chen.5i5j@gmail.com>

	* ldmain.c (main): Use %F instead of %X for einfo.

2015-03-02  Alan Modra  <amodra@gmail.com>

	* ld.texinfo (Options <-z nocopyreloc>): Rewrite.

2015-02-27  Nick Clifton  <nickc@redhat.com>

	PR ld/17900
	* ldlang.c (lang_set_flags): Allow exclamation mark to reverse the
	sense of the following memory region attribute characters.

2015-02-27  Alan Modra  <amodra@gmail.com>

	* Makefile.am (ALL_EMULATION_SOURCES): Sort new h8300 entries.
	(eh8300elf_linux.c, eh8300helf_linux.c, eh8300self_linux.c,
	eh8300sxelf_linux.c): Do not invoke genscripts here.
	* Makefile.in: Regenerate.

2015-02-24  Nick Clifton  <nickc@redhat.com>

	* Makefile.am (ev850.c): Add dependency upon
	$(srcdir)/emultempl/v850elf.em.
	(ev850_rh850.c): Likewise.
	* Makefile.in: Regenerate.
	* emultempl/v850elf.em: New file.
	* emulparams/v850.sh (EXTRA_EM_FILE): Define.
	* emulparams/v850_rh850.sh (EXTRA_EM_FILE): Define.
	* scripttempl/v850.sc: Add .note.renesas section.
	* scripttempl/v850_rh850.sc: Likewise.
